Play, stop working. Displays with nice zeros.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     Black: #0F1A20 */
 
 body {
-    background-color: #CBD6BC;
+    background-color: #0F1A20;
     color: #FDFFFC;
     font-family: 'Indie Flower', serif;
     text-shadow: #666666 2px 2px 2px;
